CppEditor: Fix possible crash when following typdefs

It's probably also a bug that we don't resolve the identically-named
struct correctly, but at least we don't crash anymore.

Fixes: QTCREATORBUG-26047
Change-Id: I272e76460c87906c9df23aaf7f37953b451bf1a8
Reviewed-by: Christian Stenger <christian.stenger@qt.io>